# wallpaper-selector

./: Cargo.toml  README.md  meson.build  meson_options.txt  translate: Add Russian translation.patch
.github/workflows/: ci.yml
build-aux/: io.github.davidoc26.wallpaper_selector.Devel.json  io.github.davidoc26.wallpaper_selector.json
data/: io.github.davidoc26.wallpaper_selector.desktop.in.in  io.github.davidoc26.wallpaper_selector.gschema.xml.in  io.github.davidoc26.wallpaper_selector.metainfo.xml.in.in
data/resources/: resources.gresource.xml  style.css
data/resources/ui/: preferences.ui  window.ui
po/: LINGUAS  POTFILES.in  it.po  ru.po  tr.po  wallpaper_selector.pot
src/: application.rs  helpers.rs  image_data.rs  main.rs  provider.rs  window.rs
src/api/: wallhaven.rs
src/core/: desktop.rs
src/provider/: wallhaven.rs
src/widgets/: mod.rs  preferences_window.rs
