[package]
name = "wallpaper-selector"
version = "0.2.0"
authors = ["David Eritsyan <dav.eritsyan@gmail.com>"]
edition = "2021"

[dependencies]
log = "0.4"
pretty_env_logger = "0.4"
gettext-rs = { version = "0.7", features = ["gettext-system"] }
once_cell = "1.9"
gtk = { version = "0.4", package = "gtk4", features = ["v4_6"] }
adw = { package = "libadwaita", version = "0.1.1" }
tokio = { version = "1.18.2", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
bytes = "1"
ashpd = { version = "0.3.2", features = ["feature_gtk4"] }
