[package]
name = "wallpaper-selector"
version = "0.3.3"
authors = ["David Eritsyan <dav.eritsyan@gmail.com>"]
edition = "2021"

[dependencies]
log = "0.4"
pretty_env_logger = "0.4"
gettext-rs = { version = "0.7", features = ["gettext-system"] }
gtk = { version = "0.7.3", package = "gtk4", features = ["v4_6"] }
adw = { package = "libadwaita", version = "0.5.3" }
tokio = { version = "1.18.2", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
bytes = "1"
ashpd = { version = "0.5.0", features = ["gtk4"] }
async-channel = "2.3.1"
