[package]
name = "wallpaper-selector"
version = "0.3.4"
authors = ["David Eritsyan <dav.eritsyan@gmail.com>"]
edition = "2021"

[dependencies]
log = "0.4"
pretty_env_logger = "0.4"
gettext-rs = { version = "0.7", features = ["gettext-system"] }
gtk = { version = "0.8.0", package = "gtk4", features = ["v4_6"] }
adw = { package = "libadwaita", version = "0.6.0" }
tokio = { version = "1.18.2", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
bytes = "1"
ashpd = { version = "0.7.0", features = ["gtk4"] }
async-channel = "2.3.1"
once_cell = "1.21.3"